Fix word wrapping

--- a/css/roam_cloze.css
+++ b/css/roam_cloze.css
@@ -79,13 +79,10 @@ pre code {
     border-radius: 50%;
     width: 5px;
     height: 5px;
+    margin-top: 4px;
     background-clip: content-box;
     border: 4px solid transparent;
     background-color: #394B59;
-}
-
-.back-side.list {
-    display: inline-block;
 }
 
 .back-side.list .block {
@@ -110,6 +107,7 @@ pre code {
 .parent {
     display: inline-block;
     font-size: 15px;
+    opacity: 0.5;
 }
 .parent::after {
     content: "›";
